--- a/src/Components/TransactionCards/CurrentBalance/currenbalance.module.css
+++ b/src/Components/TransactionCards/CurrentBalance/currenbalance.module.css
@@ -1,9 +1,9 @@
-.currentBal_container{
-    width: 33%;
-    margin: 0rem 0rem 1rem 0rem;
+.currentBal_container {
+  width: 33%;
+  margin: 0rem 0rem 1rem 0rem;
 }
 .currentBal {
-  height: 5rem;
+  height: auto;
 }
 .currentBal h2 {
   font-size: 1.3rem;
@@ -12,12 +12,14 @@
   font-size: 0.75rem;
 }
 .currentBal p {
+  display: block;
+  text-align: center;
   font-size: 1rem;
   font-weight: 700;
-  float: right;
-  margin-top: 1.5rem;
+  margin-top: 0.5rem;
+  color: #fff;
   background-color: #22c55e;
-  width: 8rem;
-  padding: 2px 15px;
+  width: 10rem;
+  padding: 0.5rem 1.5rem;
   border-radius: 0.5rem;
 }
