--- a/src/Components/TransactionCards/Transfer_to/transfer.module.css
+++ b/src/Components/TransactionCards/Transfer_to/transfer.module.css
@@ -39,6 +39,7 @@
   padding: 0.3rem 0.5rem;
   border: none;
   width: 6rem;
+  color: #fff;
   border-radius: 0.5rem;
   text-align: center;
   cursor: pointer;
