--- a/src/Components/TransactionCards/Loan/loan.module.css
+++ b/src/Components/TransactionCards/Loan/loan.module.css
@@ -5,6 +5,7 @@
 .loanForm {
   display: flex;
   flex-direction: column;
+  height: 6rem;
 }
 .loanAmount label {
   font-size: 1rem;
@@ -19,6 +20,7 @@
   height: 2.5rem;
   font-size: 1.5rem;
   background-color: #f1f2f3;
+  border-radius: 0.5rem;
 }
 .loanAmount button {
   font-size: 1rem;
