--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,11 @@ body {
   background-color: #f3f3f3;
   color: #444;
 }
+.loading{
+  font-size: x-large;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 700;
+  color: red;
+}
